@@ -551,3 +551,26 @@ _nss_ldap_readconfig (ldap_config_t ** presult, char *buf, size_t buflen)
 
   return stat;
 }
+
+#define _CHK_FAIL if ((p - buf) > buflen) goto fail
+int _nss_ldap_escape_string (const char *str, char *buf, size_t buflen)
+{
+  int ret = 1, c;
+  char *p = buf;
+
+  memset(p, '\0', buflen);
+  for (c = 0 ; str[c] ; c++) {
+    _CHK_FAIL;
+    if (str[c] == '*') {
+      *p++ = '\\';
+      _CHK_FAIL;
+    }
+    *p++ = str[c];
+  }
+
+  ret = 0;
+
+fail:
+  return ret;
+}
+#undef _CHK_FAIL
